--- a/.bowerrc
+++ b/.bowerrc
@@ -1,3 +1,9 @@
 {
-  "directory": "app/bower_components"
+   "directory": "app/bower_components",
+  "timeout": 120000,
+  "registry": {
+    "search": [
+      "https://registry.bower.io"
+    ]
+  }
 }
